--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,57 +1,20 @@
 <div class="m-0 px-2 editSection" >
     <!-- Formulario -->
-    <div class="container d-flex align-items-center px-0 justify-content-center contact-section  my-0 py-0">
+    <div class="container contact-section abs-center">
 
-        <!-- <div class="col-10 col-sm-6 col-lg-5"> -->
-          
-        <div class="col abs-center">
-            <div class="row">
-                <div class="col p-0 m-0 fs-6 abs-center justify-content-lg-end pe-md-4 pb-4 pb-md-0">
-                    <div class="text-white text-center ">
-                        <h1 class="text-shadow pb-3 pt-2 text-center text-nowrap">¿Quieres trabajar juntos?</h1>
-                        <div class="div-email">
-                            <h2 class="text-hover text-shadow email animated-shadow">MariaMonchot@gmail.com</h2>
-                        </div>
+        <div class="col col-md-10">
+            <div class="row m-0">
+                <div class="col col-md-6 p-0 m-0 abs-center justify-content-lg-end pe-md-5 pe-lg-0 pb-4 pb-md-0">
+                    <div class="text-white text-center  m-0">
+                        <h3 class="text-shadow pb-3 pt-2 text-center text-nowrap m-0 pregunta">¿Quieres trabajar juntos?</h3>
+                        <p class="text-hover text-shadow email m-0">MariaMonchot@gmail.com</p>
                     </div>
                 </div>
-                <div class="col p-0 m-0 abs-center">
+                <div class="col col-md-6 p-0 m-0 abs-center ps-md-5 ps-lg-0">
                     <img src="assets\images\id-card.png" alt="" class="img-contact">
                 </div>
             </div>
-
-
-            <!-- Row -->
-            <!-- <div class="row p-0 m-0 fs-6">
-                
-                <div class="col-12 form-floating">
-                    <input  type="text" class="form-control " placeholder="Nombre" id="floatingInput">
-                    <label for="floatingInput" class=" text-muted ps-4">Nombre</label>
-                </div>
-                <div class="col-12  form-floating  ">
-                    <input  type="text" class="form-control  " placeholder="Asunto" id="floatingInput">
-                    <label for="floatingInput" class="text-muted ps-4">Asunto</label>
-                </div>
-                 
-                <div class="col-12 form-floating">
-                    <input  type="email" class="form-control" id="floatingInput" placeholder="email@gmail.com">
-                    <label for="floatingInput" class="text-muted  ps-4">email@gmail.com</label>
-                </div>
-                <div class="col-12 form-floating">
-                    <textarea  class="form-control  " id="floatingInput" placeholder="Escriba su Email"></textarea>
-                    <label for="floatingInput" class="text-muted ps-4 ">Escriba su Email</label>
-                </div>
-
-
-                <div class="col-12 pt-2 d-flex justify-content-center">
-                    
-                    <button type="button" class="btn-medium p-2 px-4">
-                    Enviar
-                    </button>
-                </div>
-            </div> -->
-
-
-        </div>  
+        </div>
     </div>
     
     <app-footer></app-footer>
