--- a/src/app/components/credits/credits.component.css
+++ b/src/app/components/credits/credits.component.css
@@ -1,6 +1,6 @@
-.credits-section{
-    height: 81vh;
-}
+/* .credits-section{
+    min-height: 81vh;
+} */
 
 .fondo-credits{
     background-color: var(--dust);
