--- a/src/app/components/credits/credits.component.html
+++ b/src/app/components/credits/credits.component.html
@@ -1,14 +1,14 @@
 <div class="editSection container-fluid d-grid">
 
-    <div class="credits-section abs-center pt-4">
-        <div class="my-auto fondo-credits px-4 rounded-3 ">
+    <div class="credits-section abs-center ">
+        <div class="container-fluid fondo-credits  rounded-3 col-11">
 
-            <h2 class=" text-shadow text-white pt-3 text-center text-lg-start border-bottom border-1">Créditos</h2> 
+            <h2 class=" text-shadow text-white text-center text-lg-start border-bottom border-1 pt-lg-5 pb-2">Créditos</h2> 
   
-            <div class="row text-white texto pt-3">
+            <div class="row text-white texto pt-3 ">
     
-                <div class="col-12 col-md-6">
-                    <h4 class="apartado">De Flaticon:</h4>
+                <div class="col-12 col-sm-6">
+                    <h4 class="apartado ">De Flaticon:</h4>
                     <ul class="list-unstyled texto">
                         <li class="pb-3">
                             <p class="subtitulo">Persona con bata y café</p>
@@ -42,7 +42,7 @@
                     </ul>
                 </div>
     
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-sm-6">
                     <h4 class="apartado">De Pexels:</h4>
                     <ul class="list-unstyled texto">
                         <li  class="pb-3">
