--- a/src/app/components/experiencia-y-proyectos/proyectos/edit-proyecto.component.html
+++ b/src/app/components/experiencia-y-proyectos/proyectos/edit-proyecto.component.html
@@ -32,7 +32,7 @@
         </div>
 
         <button class="btn-medium py-2 px-3">
-            Agregar Proyecto
+            Actualizar Proyecto
         </button>
     </form>
 </div>
