--- a/src/app/components/experiencia-y-proyectos/proyectos/proyectos.component.css
+++ b/src/app/components/experiencia-y-proyectos/proyectos/proyectos.component.css
@@ -2,7 +2,6 @@
 .card-trabajo{
     background-color:var(--gris);
     border-radius: 0.3rem;
-    min-height: 17vh;
     overflow-wrap: break-word;
     
 }
@@ -19,3 +18,7 @@
 
 }
 
+.no-line{
+    list-style: none;
+    text-decoration: none;
+}
